ruleEngine/base/RuleEngineParser.py
# Generated from RuleEngine.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class RuleEngineParser ( Parser ):

    grammarFileName = "RuleEngine.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'null'", "'sum'", "'avg'", "'sqrt'", 
                     "'log'", "'count'", "'len'", "'max'", "'min'", "'substr'", 
                     "'trim'", "'is_number'", "'is_int'", "'is_null'", "'to_str'", 
                     "'to_int'", "'to_float'", "'to_date'", "'add_to_date'", 
                     "'date_diff'", "'sysdate'", "'\u6253\u5F00'", "'\u5173\u95ED'", 
                     "<INVALID>", "'elif'", "'else'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", 
                     "'**'", "'='", "'!'", "'&&'", "'||'", "'=='", "'!='", 
                     "'>'", "'<'", "'>='", "'<='", "'('", "')'", "'{'", 
                     "'}'", "';'", "','" ]

    symbolicNames = [ "<INVALID>", "INT_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", 
                      "BOOLEAN_LITERAL", "NULL_LITERAL", "SUM", "AVG", "SQRT", 
                      "LOG", "COUNT", "LEN", "MAX", "MIN", "SUBSTR", "TRIM", 
                      "IS_NUMBER", "IS_INT", "IS_NULL", "TO_STR", "TO_INT", 
                      "TO_FLOAT", "TO_DATE", "ADD_TO_DATE", "DATE_DIFF", 
                      "SYSDATE", "OPEN", "CLOSE", "IF", "ELIF", "ELSE", 
                      "CHINESE_VAR", "LOCAL_VAR", "REF_VAR", "ADD", "SUB", 
                      "MUL", "DIV", "FLOOR_DIV", "MOD", "POW", "ASSIGN", 
                      "NOT", "AND", "OR", "EQ", "NE", "GT", "LT", "GE", 
                      "LE", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "SEMI", 
                      "COMMA", "BLOCK_COMMENT", "WS", "LINE_COMMENT" ]

    RULE_statements = 0
    RULE_statements_block = 1
    RULE_statement = 2
    RULE_assign_statement = 3
    RULE_if_statement = 4
    RULE_condition = 5
    RULE_condition_branch = 6
    RULE_action_exp = 7
    RULE_expression = 8
    RULE_paralist = 9
    RULE_para = 10

    ruleNames =  [ "statements", "statements_block", "statement", "assign_statement", 
                   "if_statement", "condition", "condition_branch", "action_exp", 
                   "expression", "paralist", "para" ]

    EOF = Token.EOF
    INT_LITERAL=1
    FLOAT_LITERAL=2
    STRING_LITERAL=3
    BOOLEAN_LITERAL=4
    NULL_LITERAL=5
    SUM=6
    AVG=7
    SQRT=8
    LOG=9
    COUNT=10
    LEN=11
    MAX=12
    MIN=13
    SUBSTR=14
    TRIM=15
    IS_NUMBER=16
    IS_INT=17
    IS_NULL=18
    TO_STR=19
    TO_INT=20
    TO_FLOAT=21
    TO_DATE=22
    ADD_TO_DATE=23
    DATE_DIFF=24
    SYSDATE=25
    OPEN=26
    CLOSE=27
    IF=28
    ELIF=29
    ELSE=30
    CHINESE_VAR=31
    LOCAL_VAR=32
    REF_VAR=33
    ADD=34
    SUB=35
    MUL=36
    DIV=37
    FLOOR_DIV=38
    MOD=39
    POW=40
    ASSIGN=41
    NOT=42
    AND=43
    OR=44
    EQ=45
    NE=46
    GT=47
    LT=48
    GE=49
    LE=50
    LPAREN=51
    RPAREN=52
    LBRACE=53
    RBRACE=54
    SEMI=55
    COMMA=56
    BLOCK_COMMENT=57
    WS=58
    LINE_COMMENT=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RuleEngineParser.StatementContext)
            else:
                return self.getTypedRuleContext(RuleEngineParser.StatementContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(RuleEngineParser.SEMI)
            else:
                return self.getToken(RuleEngineParser.SEMI, i)

        def getRuleIndex(self):
            return RuleEngineParser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = RuleEngineParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.statement()
            self.state = 27
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 23
                    self.match(RuleEngineParser.SEMI)
                    self.state = 24
                    self.statement() 
                self.state = 29
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 30
            self.match(RuleEngineParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statements_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(RuleEngineParser.LBRACE, 0)

        def statements(self):
            return self.getTypedRuleContext(RuleEngineParser.StatementsContext,0)


        def RBRACE(self):
            return self.getToken(RuleEngineParser.RBRACE, 0)

        def getRuleIndex(self):
            return RuleEngineParser.RULE_statements_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements_block" ):
                return visitor.visitStatements_block(self)
            else:
                return visitor.visitChildren(self)




    def statements_block(self):

        localctx = RuleEngineParser.Statements_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statements_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(RuleEngineParser.LBRACE)
            self.state = 33
            self.statements()
            self.state = 34
            self.match(RuleEngineParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RuleEngineParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExprStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(RuleEngineParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_statement(self):
            return self.getTypedRuleContext(RuleEngineParser.If_statementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class ExprActionContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def action_exp(self):
            return self.getTypedRuleContext(RuleEngineParser.Action_expContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprAction" ):
                return visitor.visitExprAction(self)
            else:
                return visitor.visitChildren(self)


    class AssignStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assign_statement(self):
            return self.getTypedRuleContext(RuleEngineParser.Assign_statementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = RuleEngineParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 40
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = RuleEngineParser.ExprStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.expression(0)
                pass

            elif la_ == 2:
                localctx = RuleEngineParser.ExprActionContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 37
                self.action_exp()
                pass

            elif la_ == 3:
                localctx = RuleEngineParser.AssignStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 38
                self.assign_statement()
                pass

            elif la_ == 4:
                localctx = RuleEngineParser.IfStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 39
                self.if_statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RuleEngineParser.RULE_assign_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignChineseContext(Assign_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.Assign_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CHINESE_VAR(self):
            return self.getToken(RuleEngineParser.CHINESE_VAR, 0)
        def ASSIGN(self):
            return self.getToken(RuleEngineParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(RuleEngineParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignChinese" ):
                return visitor.visitAssignChinese(self)
            else:
                return visitor.visitChildren(self)


    class AssignLocalContext(Assign_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.Assign_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LOCAL_VAR(self):
            return self.getToken(RuleEngineParser.LOCAL_VAR, 0)
        def ASSIGN(self):
            return self.getToken(RuleEngineParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(RuleEngineParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignLocal" ):
                return visitor.visitAssignLocal(self)
            else:
                return visitor.visitChildren(self)


    class AssignRefContext(Assign_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.Assign_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REF_VAR(self):
            return self.getToken(RuleEngineParser.REF_VAR, 0)
        def ASSIGN(self):
            return self.getToken(RuleEngineParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(RuleEngineParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignRef" ):
                return visitor.visitAssignRef(self)
            else:
                return visitor.visitChildren(self)



    def assign_statement(self):

        localctx = RuleEngineParser.Assign_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign_statement)
        try:
            self.state = 51
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RuleEngineParser.LOCAL_VAR]:
                localctx = RuleEngineParser.AssignLocalContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 42
                self.match(RuleEngineParser.LOCAL_VAR)
                self.state = 43
                self.match(RuleEngineParser.ASSIGN)
                self.state = 44
                self.expression(0)
                pass
            elif token in [RuleEngineParser.REF_VAR]:
                localctx = RuleEngineParser.AssignRefContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 45
                self.match(RuleEngineParser.REF_VAR)
                self.state = 46
                self.match(RuleEngineParser.ASSIGN)
                self.state = 47
                self.expression(0)
                pass
            elif token in [RuleEngineParser.CHINESE_VAR]:
                localctx = RuleEngineParser.AssignChineseContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.match(RuleEngineParser.CHINESE_VAR)
                self.state = 49
                self.match(RuleEngineParser.ASSIGN)
                self.state = 50
                self.expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(RuleEngineParser.IF, 0)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(RuleEngineParser.LPAREN)
            else:
                return self.getToken(RuleEngineParser.LPAREN, i)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RuleEngineParser.ConditionContext)
            else:
                return self.getTypedRuleContext(RuleEngineParser.ConditionContext,i)


        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(RuleEngineParser.RPAREN)
            else:
                return self.getToken(RuleEngineParser.RPAREN, i)

        def condition_branch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RuleEngineParser.Condition_branchContext)
            else:
                return self.getTypedRuleContext(RuleEngineParser.Condition_branchContext,i)


        def ELSE(self):
            return self.getToken(RuleEngineParser.ELSE, 0)

        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(RuleEngineParser.ELIF)
            else:
                return self.getToken(RuleEngineParser.ELIF, i)

        def getRuleIndex(self):
            return RuleEngineParser.RULE_if_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = RuleEngineParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(RuleEngineParser.IF)
            self.state = 54
            self.match(RuleEngineParser.LPAREN)
            self.state = 55
            self.condition()
            self.state = 56
            self.match(RuleEngineParser.RPAREN)
            self.state = 57
            self.condition_branch()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RuleEngineParser.ELIF:
                self.state = 58
                self.match(RuleEngineParser.ELIF)
                self.state = 59
                self.match(RuleEngineParser.LPAREN)
                self.state = 60
                self.condition()
                self.state = 61
                self.match(RuleEngineParser.RPAREN)
                self.state = 62
                self.condition_branch()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(RuleEngineParser.ELSE)
            self.state = 70
            self.condition_branch()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(RuleEngineParser.ExpressionContext,0)


        def getRuleIndex(self):
            return RuleEngineParser.RULE_condition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = RuleEngineParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Condition_branchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RuleEngineParser.RULE_condition_branch

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BranchStmtContext(Condition_branchContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.Condition_branchContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statement(self):
            return self.getTypedRuleContext(RuleEngineParser.StatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBranchStmt" ):
                return visitor.visitBranchStmt(self)
            else:
                return visitor.visitChildren(self)


    class BranchBlockContext(Condition_branchContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.Condition_branchContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def statements_block(self):
            return self.getTypedRuleContext(RuleEngineParser.Statements_blockContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBranchBlock" ):
                return visitor.visitBranchBlock(self)
            else:
                return visitor.visitChildren(self)



    def condition_branch(self):

        localctx = RuleEngineParser.Condition_branchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condition_branch)
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RuleEngineParser.INT_LITERAL, RuleEngineParser.FLOAT_LITERAL, RuleEngineParser.STRING_LITERAL, RuleEngineParser.BOOLEAN_LITERAL, RuleEngineParser.NULL_LITERAL, RuleEngineParser.SUM, RuleEngineParser.AVG, RuleEngineParser.SQRT, RuleEngineParser.LOG, RuleEngineParser.COUNT, RuleEngineParser.LEN, RuleEngineParser.MAX, RuleEngineParser.MIN, RuleEngineParser.SUBSTR, RuleEngineParser.TRIM, RuleEngineParser.IS_NUMBER, RuleEngineParser.IS_INT, RuleEngineParser.IS_NULL, RuleEngineParser.TO_STR, RuleEngineParser.TO_INT, RuleEngineParser.TO_FLOAT, RuleEngineParser.TO_DATE, RuleEngineParser.ADD_TO_DATE, RuleEngineParser.DATE_DIFF, RuleEngineParser.SYSDATE, RuleEngineParser.OPEN, RuleEngineParser.CLOSE, RuleEngineParser.IF, RuleEngineParser.CHINESE_VAR, RuleEngineParser.LOCAL_VAR, RuleEngineParser.REF_VAR, RuleEngineParser.SUB, RuleEngineParser.NOT, RuleEngineParser.LPAREN]:
                localctx = RuleEngineParser.BranchStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.statement()
                pass
            elif token in [RuleEngineParser.LBRACE]:
                localctx = RuleEngineParser.BranchBlockContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.statements_block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Action_expContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN(self):
            return self.getToken(RuleEngineParser.OPEN, 0)

        def statement(self):
            return self.getTypedRuleContext(RuleEngineParser.StatementContext,0)


        def CLOSE(self):
            return self.getToken(RuleEngineParser.CLOSE, 0)

        def getRuleIndex(self):
            return RuleEngineParser.RULE_action_exp

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction_exp" ):
                return visitor.visitAction_exp(self)
            else:
                return visitor.visitChildren(self)




    def action_exp(self):

        localctx = RuleEngineParser.Action_expContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_action_exp)
        try:
            self.state = 82
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RuleEngineParser.OPEN]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78
                self.match(RuleEngineParser.OPEN)
                self.state = 79
                self.statement()
                pass
            elif token in [RuleEngineParser.CLOSE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.match(RuleEngineParser.CLOSE)
                self.state = 81
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return RuleEngineParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class AddContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RuleEngineParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(RuleEngineParser.ExpressionContext,i)

        def ADD(self):
            return self.getToken(RuleEngineParser.ADD, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)


    class Date_diffContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DATE_DIFF(self):
            return self.getToken(RuleEngineParser.DATE_DIFF, 0)
        def LPAREN(self):
            return self.getToken(RuleEngineParser.LPAREN, 0)
        def paralist(self):
            return self.getTypedRuleContext(RuleEngineParser.ParalistContext,0)

        def RPAREN(self):
            return self.getToken(RuleEngineParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDate_diff" ):
                return visitor.visitDate_diff(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RuleEngineParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(RuleEngineParser.ExpressionContext,i)

        def OR(self):
            return self.getToken(RuleEngineParser.OR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class MaxContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def MAX(self):
            return self.getToken(RuleEngineParser.MAX, 0)
        def LPAREN(self):
            return self.getToken(RuleEngineParser.LPAREN, 0)
        def paralist(self):
            return self.getTypedRuleContext(RuleEngineParser.ParalistContext,0)

        def RPAREN(self):
            return self.getToken(RuleEngineParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMax" ):
                return visitor.visitMax(self)
            else:
                return visitor.visitChildren(self)


    class UminusContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SUB(self):
            return self.getToken(RuleEngineParser.SUB, 0)
        def expression(self):
            return self.getTypedRuleContext(RuleEngineParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUminus" ):
                return visitor.visitUminus(self)
            else:
                return visitor.visitChildren(self)


    class BooleanLiteralContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOOLEAN_LITERAL(self):
            return self.getToken(RuleEngineParser.BOOLEAN_LITERAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBooleanLiteral" ):
                return visitor.visitBooleanLiteral(self)
            else:
                return visitor.visitChildren(self)


    class Add_to_dateContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ADD_TO_DATE(self):
            return self.getToken(RuleEngineParser.ADD_TO_DATE, 0)
        def LPAREN(self):
            return self.getToken(RuleEngineParser.LPAREN, 0)
        def paralist(self):
            return self.getTypedRuleContext(RuleEngineParser.ParalistContext,0)

        def RPAREN(self):
            return self.getToken(RuleEngineParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd_to_date" ):
                return visitor.visitAdd_to_date(self)
            else:
                return visitor.visitChildren(self)


    class CountContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COUNT(self):
            return self.getToken(RuleEngineParser.COUNT, 0)
        def LPAREN(self):
            return self.getToken(RuleEngineParser.LPAREN, 0)
        def paralist(self):
            return self.getTypedRuleContext(RuleEngineParser.ParalistContext,0)

        def RPAREN(self):
            return self.getToken(RuleEngineParser.RPAREN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCount" ):
                return visitor.visitCount(self)
            else:
                return visitor.visitChildren(self)


    class EqContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RuleEngineParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(RuleEngineParser.ExpressionContext,i)

        def EQ(self):
            return self.getToken(RuleEngineParser.EQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEq" ):
                return visitor.visitEq(self)
            else:
                return visitor.visitChildren(self)


    class To_dateContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a RuleEngineParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)
